# unrestricted-walking-preprocess

./: .gitignore  .pre-commit-config.yaml  README.md  STEP0_build_preparatory_data_BORDEAUX.sh  uwpreprocess_BORDEAUX.sh  uwpreprocess_IDF.sh
MyCustomUsage/: CMakeLists.txt  download-idf-data-gtfs.cmake
MyCustomUsage/Data/: bordeaux_polygon.geojson
MyCustomUsage/Data/bordeaux_gtfs/: extract_7z.sh
MyCustomUsage/Mains/: CMakeLists.txt
MyCustomUsage/Mains/BuildPreparatory/: build-preparatory.cpp
MyCustomUsage/MutualizedPreprocess/: CMakeLists.txt
MyCustomUsage/MutualizedPreprocess/Graph/: extending_with_stops.cpp  extending_with_stops.h  geojson.cpp  geojson.h  graph.cpp  graph.h  graphtypes.h  osmparsing.cpp  osmparsing.h  polygon.cpp  polygon.h  polygonfile.cpp  polygonfile.h  walking_graph.cpp  walking_graph.h
MyCustomUsage/MutualizedPreprocess/GtfsParsing/: gtfs_geojson.h  gtfs_parsed_data.cpp  gtfs_parsed_data.h  gtfs_parsing_structures.cpp  gtfs_parsing_structures.h
MyCustomUsage/Scripts/: download_KIT_data.sh  remove_invalid_transfers.py
data/: idf_polygon.geojson
data/bordeaux_gtfs/: bordeaux_gtfs.tar.7z
scripts/: use_parent_stations.py
scripts/analyze_gtfs/: check_stop_times_departure_equals_arrival.py  list_trips_joining_stops.py
src/: CMakeLists.txt  conanfile.txt  conanprofile.txt
src/cmake/: cppgtfs.cmake  download-bordeaux-data-gtfs.cmake  download-bordeaux-data-osm.cmake  download-idf-data-osm.cmake
src/graph/: CMakeLists.txt  extending_with_stops.cpp  extending_with_stops.h  geojson.cpp  geojson.h  graph.cpp  graph.h  graphtypes.h  osmparsing.cpp  osmparsing.h  polygon.cpp  polygon.h  polygonfile.cpp  polygonfile.h  types.h  walking_graph.cpp  walking_graph.h
src/gtfs/: CMakeLists.txt  gtfs_geojson.cpp  gtfs_geojson.h  gtfs_parsed_data.cpp  gtfs_parsed_data.h  gtfs_parsing_structures.cpp  gtfs_parsing_structures.h
src/json/: CMakeLists.txt  gtfs_serialization.cpp  gtfs_serialization.h  polygon_serialization.cpp  polygon_serialization.h  walking_graph_serialization.cpp  walking_graph_serialization.h
src/mains/: CMakeLists.txt  main-uwpreprocess.cpp
src/mains/build-preparatory/: CMakeLists.txt  build-preparatory.cpp
